force-app/main/default/objects/HP_TECH_LOG__c/HP_TECH_LOG__c.object-meta.xml
<CustomObject>
    <label>HP Log Tech</label>
    <nameField>
        <displayFormat>HPLOG-{000000}</displayFormat>
        <label>HP TECH LOG Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HP Log Tech</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>