force-app/main/default/objects/HP_TECH_LOG__c/fields/EmailBody__c.field-meta.xml
<CustomField>
    <fullName>EmailBody__c</fullName>
    <description>Email Body</description>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>