force-app/main/default/objects/HP_TECH_LOG__c/fields/ErrorLine__c.field-meta.xml
<CustomField>
    <fullName>ErrorLine__c</fullName>
    <label>Error Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>