force-app/main/default/objects/HP_TECH_LOG__c/fields/Metadata__c.field-meta.xml
<CustomField>
    <fullName>Metadata__c</fullName>
    <label>Metadata</label>
    <type>TextArea</type>
</CustomField>