force-app/main/default/objects/HP_TECH_LOG__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>