force-app/main/default/objects/HP_TECH_LOG__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Projet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happe</fullName>
            </value>
            <value>
                <fullName>Smile</fullName>
            </value>
            <value>
                <fullName>Non identifié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>