force-app/main/default/objects/HP_TECH_LOG__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nouveau</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Traité</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>