force-app/main/default/objects/HP_TECH_LOG__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <type>Url</type>
</CustomField>