force-app/main/default/objects/HP_TECH_LOG__c/listViews/ALL_HP.listView-meta.xml
<ListView>
    <fullName>ALL_HP</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project__c</columns>
    <columns>Type__c</columns>
    <columns>Metadata__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>Status__c</columns>
    <columns>Comment__c</columns>
    <columns>Ticket__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Metadata__c</field>
        <operation>contains</operation>
        <value>HP_</value>
    </filters>
    <label>ALL HP</label>
</ListView>